solc_mutator_ossfuzz_seed_corpus/test_sol/test_95484c9993c8f2acf438217e23379724fb3951830e844f0de34c697d69ec2758_17a944e867d7bb5a5bcfc7dc772f7d9593618c36_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
function f0()     returns(function (function (bool, uint144) internal   returns (address, int192)[1] memory, address) external   returns (bytes13, address, function (address, int160) external   returns (bool, string memory)) o0)
{
  return (f0());
}
// ----
// TypeError 2582: (su0.sol:62-133): Internal type cannot be used for external function type.
